--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -8,11 +8,13 @@
   button, button:focus, button:hover {
     outline: none;
     flex: 1 1 auto;
-    font-size: 10vw;
+    font-size: 5vw;
     background-color: transparent;
-    border: 2px solid $theme-primary;
-    color: $theme-primary;
+    border: 1px solid;
     font-weight: 100;
+    color: inherit;
+    border-color: inherit;
+    padding: 8px 0;
 
     &:not(:last-of-type) {
       border-right: 0px;
@@ -20,10 +22,10 @@
   }
 
   button:active {
-    background-color: $theme-primary;
+    //background-color: $theme-primary;
   }
 
   button:hover {
-    background-color: $theme-primary;
+    //background-color: $theme-primary;
   }
 }
