--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -29,3 +29,14 @@
     //background-color: $theme-primary;
   }
 }
+
+button {
+  outline: none;
+  font-size: 5vw;
+  background-color: transparent;
+  border: 1px solid;
+  font-weight: 100;
+  color: inherit;
+  border-color: inherit;
+  padding: 8px 0;
+}
